# Dhara_water_supplier

./: .gitignore  README.md  render.yaml
backend/: pyproject.toml  test_db.py  test_query.py  test_tables.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  clients.py  dashboard.py  events.py  inventory.py  invoices.py  notifications.py  payments.py  products.py  reports.py  search.py  suppliers.py
backend/app/core/: config.py  deps.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: base.py  entities.py
backend/app/schemas/: auth.py  common.py  domain.py
backend/app/services/: auth_service.py  contact_service.py  dashboard_service.py  event_service.py  inventory_service.py  invoice_service.py  notification_service.py  payment_service.py  report_service.py  search_service.py
backend/app/utils/: audit.py  emailer.py  invoice_pdf.py  whatsapp.py
backend/tests/: test_smoke.py
database/migrations/: 001_init.sql
database/seeds/: demo_seed.sql
docs/: WALKTHROUGH.md
docs/architecture/: database-schema.md  deployment-guide.md  folder-structure.md  qa-report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: app-sidebar.tsx  chart-card.tsx  entity-card.tsx  form-field-block.tsx  kpi-card.tsx  loading-screen.tsx  (+6 more)
(+27 files in other folders)
